Update collapse.scss: fix height without script

--- a/src/styles/components/collapse.scss
+++ b/src/styles/components/collapse.scss
@@ -12,6 +12,7 @@
 
     &__show {
         /* height will be set dynamically via JS */
+        height: auto;
         transform: scaleY(1);
         opacity: 1;
     }
